--- a/src/turboWatch_en_US.properties
+++ b/src/turboWatch_en_US.properties
@@ -1,2 +1,7 @@
+loginHeslo=Password
 odpozdrav=goodbye
 pozdrav=Hello
+loginPrihlasovacieMeno=User name
+loginPrihlasit=Login
+loginRegistrovat=Register
+loginJazyk=Language
