--- a/src/turboWatch_sk_SK.properties
+++ b/src/turboWatch_sk_SK.properties
@@ -1,2 +1,7 @@
+loginHeslo=Heslo
 odpozdrav=dovi
 pozdrav=Ciao
+loginPrihlasovacieMeno=Uzivatelske meno
+loginPrihlasit=Prihlasit
+loginRegistrovat=Registracia
+loginJazyk=Jazyk
