--- a/src/turboWatch_en_US.properties
+++ b/src/turboWatch_en_US.properties
@@ -5,3 +5,10 @@ loginPrihlasovacieMeno=User name
 loginPrihlasit=Login
 loginRegistrovat=Register
 loginJazyk=Language
+registrationPrihlasovacieMeno=Login Name
+registrationHeslo=Password
+registrationOverenieHesla=Repeat password
+registrationSpat=Back
+registrationRegistruj=Sign up
+oknoRegistracia=Sign up window
+oknoLogin=Login
