--- a/src/turboWatch_sk_SK.properties
+++ b/src/turboWatch_sk_SK.properties
@@ -1,7 +1,14 @@
 loginHeslo=Heslo
 odpozdrav=dovi
 pozdrav=Ciao
-loginPrihlasovacieMeno=Uzivatelske meno
+loginPrihlasovacieMeno=Prihlasovacie meno
 loginPrihlasit=Prihlasit
 loginRegistrovat=Registracia
 loginJazyk=Jazyk
+registrationPrihlasovacieMeno=Prihlasovacie meno
+registrationHeslo=Heslo
+registrationOverenieHesla=Zopakuj heslo
+registrationSpat=Spat
+registrationRegistruj=Registruj
+oknoRegistracia=Registracne okno
+oknoLogin=Prihlasenie
