--- a/src/turboWatch_en_US.properties
+++ b/src/turboWatch_en_US.properties
@@ -12,3 +12,18 @@ registrationSpat=Back
 registrationRegistruj=Sign up
 oknoRegistracia=Sign up window
 oknoLogin=Login
+oknoFilmyUzivatela=Your movies
+umStlpecMeno=Name
+umStlpecReziser=Director
+umStlpecRok=Year
+umStlpecZaner=Genre
+umStlpecHodnotenie=Rating
+userPrihlaseny=Logged in as
+userOdhlasenie=Log out
+userMojeFilmy=My movies
+userVyhladajFilmy=Search movies
+chyba=Error
+prihlasenieChyba=Login failed
+prihlasenieChybaInfo=Wrong user name or password
+prihlasenie=Logged in
+prihlasenieUspesne=Logged in succesfully
