--- a/src/turboWatch_sk_SK.properties
+++ b/src/turboWatch_sk_SK.properties
@@ -12,3 +12,18 @@ registrationSpat=Spat
 registrationRegistruj=Registruj
 oknoRegistracia=Registracne okno
 oknoLogin=Prihlasenie
+oknoFilmyUzivatela=Tvoje filmy
+umStlpecMeno=Nazov
+umStlpecReziser=Reziser
+umStlpecRok=Rok
+umStlpecZaner=Zaner
+umStlpecHodnotenie=Hodnotenie
+userPrihlaseny=Prihlaseny ako 
+userOdhlasenie=Odhlasit
+userMojeFilmy=Moje filmy
+userVyhladajFilmy=Vyhladaj filmy
+chyba=Chyba
+prihlasenieChyba=Chyba pri prihlaseni
+prihlasenieChybaInfo=Zle zadane meno alebo heslo
+prihlasenie=Prihlasenie
+prihlasenieUspesne=Uspesne prihlaseny
