added Movie detail and filter window

--- a/src/turboWatch_en_US.properties
+++ b/src/turboWatch_en_US.properties
@@ -27,3 +27,11 @@ prihlasenieChyba=Login failed
 prihlasenieChybaInfo=Wrong user name or password
 prihlasenie=Logged in
 prihlasenieUspesne=Logged in succesfully
+actors=Actor
+DetailHodnotenia=Detail of review
+MojeHodnotenie=My rating
+ohodnot=Rate
+zmenaRatingu=Rating was changed
+od=from
+do=to
+Hladaj=Search
