--- a/src/turboWatch_sk_SK.properties
+++ b/src/turboWatch_sk_SK.properties
@@ -27,3 +27,11 @@ prihlasenieChyba=Chyba pri prihlaseni
 prihlasenieChybaInfo=Zle zadane meno alebo heslo
 prihlasenie=Prihlasenie
 prihlasenieUspesne=Uspesne prihlaseny
+actors=Herci
+DetailHodnotenia=Detail hodnotenia
+MojeHodnotenie=Moje Hodnotenie
+ohodnot=Ohodnot
+zmenaRatingu=Rating bol zmeneny
+od=od
+do=do
+Hladaj=Vyhladaj
