3 new languages and refresh my film added

--- a/src/turboWatch_sk_SK.properties
+++ b/src/turboWatch_sk_SK.properties
@@ -1,6 +1,6 @@
 loginHeslo=Heslo
 odpozdrav=dovi
-pozdrav=Ciao
+pozdrav=Ahoj
 loginPrihlasovacieMeno=Prihlasovacie meno
 loginPrihlasit=Prihlasit
 loginRegistrovat=Registracia
