--- a/src/turboWatch_is_IS.properties
+++ b/src/turboWatch_is_IS.properties
@@ -1,3 +1,4 @@
+recenzie=Reviews
 loginHeslo=Lykiloro
 odpozdrav=vvv
 pozdrav=Hallo
@@ -24,10 +25,10 @@ userMojeFilmy=Minar kvikmyndir
 userVyhladajFilmy=Leita bio
 chyba=Villa
 prihlasenieChyba=Innskraning mistokst 
-prihlasenieChybaInfo=Autenticazione
+prihlasenieChybaInfo=Erroro
 prihlasenie=Skraour inn
 prihlasenieUspesne=Skraour inn
-actors=leikari
+actors=Leikari
 DetailHodnotenia=Smaatrioi endurskooun
 MojeHodnotenie=Einkunn
 ohodnot=Hlutfall
@@ -36,3 +37,5 @@ od=fra
 do=ao
 Hladaj=Leita
 vyhladaneFilmy=Niourstoour 
+uzivatel=User
+detail=Detail
