--- a/src/turboWatch_it_IT.properties
+++ b/src/turboWatch_it_IT.properties
@@ -1,3 +1,4 @@
+recenzie=Reviews
 loginHeslo=Password
 odpozdrav=v
 pozdrav=Ciao
@@ -24,10 +25,10 @@ userMojeFilmy=Mio pellaculas
 userVyhladajFilmy=Cecare pellaculas
 chyba=Errore
 prihlasenieChyba=Accesso fallito
-prihlasenieChybaInfo=Errore 
+prihlasenieChybaInfo=Errore Autenticazione
 prihlasenie=Adresso sei collegato
 prihlasenieUspesne=Adresso sei collegato
-actors=attore
+actors=Attore
 DetailHodnotenia=Dettaglio di recensire
 MojeHodnotenie=Mi valutare
 ohodnot=Tasso
@@ -36,3 +37,5 @@ od=da
 do=sigla
 Hladaj=Cercare
 vyhladaneFilmy=Risultato
+uzivatel=User
+detail=Detail
