--- a/src/turboWatch_sk_SK.properties
+++ b/src/turboWatch_sk_SK.properties
@@ -1,3 +1,4 @@
+recenzie=Recenzie
 loginHeslo=Heslo
 odpozdrav=dovi
 pozdrav=Ahoj
@@ -36,3 +37,5 @@ od=od
 do=do
 Hladaj=Vyhladaj
 vyhladaneFilmy=Vysledky hladania
+uzivatel=Uzivatel
+detail=Detail
