--- a/src/turboWatch_es_ES.properties
+++ b/src/turboWatch_es_ES.properties
@@ -1,3 +1,4 @@
+recenzie=Reviews
 loginHeslo=Contrasena
 odpozdrav=adiós
 pozdrav=Hola
@@ -36,3 +37,5 @@ od=de
 do=hasta
 Hladaj=Busqueda
 vyhladaneFilmy=Resultados de busqueda
+uzivatel=User
+detail=Detail
